syntax = "proto3";

package tattooapp.v1;

import "tattooapp/v1/user.proto";

option go_package = "github.com/kbremont/tattoo-app/api/proto/gen/go/tattooapp/v1;pb";

service ArtistService {
    rpc LinkInstagramAccount(LinkInstagramAccountRequest) returns (LinkInstagramAccountResponse);
    rpc CreateArtist(CreateArtistRequest) returns (CreateArtistResponse);
}

message LinkInstagramAccountRequest {
    User user = 1;
    string instagram_handle = 2;
}

message LinkInstagramAccountResponse {
    string instagram_handle = 1;
}

// information needed to create an artist
message CreateArtistRequest {
    int32 user_id = 1;
    string style = 2;
}

// response to creating an artist
message CreateArtistResponse {
    int32 artist_id = 1;
}